--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
 }
 
 .header {
-  background-color: rgba(178, 235, 242, 0.5);
+  background: rgba(178, 235, 242, 0.5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .header-image {
